kubernetes/components/network-policies/internet-egress/allow-internet-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.42.0.0/16
              - 10.43.0.0/16
              - 10.20.0.0/24
              - 10.30.0.0/24
              - 192.168.2.0/24
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
